--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
               A New Style!
             </h1>
             <p>
-              Being mourid isn't always about saying "i'm mouride" only. It's about showing it in
-               your appearance also   <br />
+              Being mourid is not always about saying "i'm mouride" only. It's about showing it in
+               your appearance also <br/>
               Being mourid means being stylish and always looking good.
             </p>
             <a href="" class="btn">Explore Now &#8594;</a>
