--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <li><a href="">Products</a></li>
               <li><a href="">About</a></li>
               <li><a href="">Contact</a></li>
-              <li><a href="">Account</a></li>
+              <li><a href="register.html">Account</a></li>
             </ul>
           </nav>
           <img src="images/cart.png" width="30px" height="30px" />
