--- a/register.html
+++ b/register.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Slide Navbar</title>
     <link rel="stylesheet" type="text/css" href="register.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet" />
+    <!-- Add JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Add amazon sdk -->
+    <script src="https://rawgit.com/aws/amazon-cognito-identity-js/master/dist/aws-cognito-sdk.min.js"></script>
+    <script src="https://rawgit.com/aws/amazon-cognito-identity-js/master/dist/amazon-cognito-identity.min.js"></script>
+    <!-- Add cognito-auth file -->
+    <script src="./cognito-auth.js"></script>
+</head>
+
+<body>
     <div class="main">
-      <input type="checkbox" id="chk" aria-hidden="true" />
+        <input type="checkbox" id="chk" aria-hidden="true" />
 
-      <div class="signup">
-        <form>
-          <label for="chk" aria-hidden="true">Sign up</label>
-          <input type="text" name="txt" placeholder="User name" required="" />
-          <input type="email" name="email" placeholder="Email" required="" />
-          <input
-            type="password"
-            name="pswd"
-            placeholder="Password"
-            required=""
-          />
-          <button>Sign up</button>
-        </form>
-      </div>
+        <div class="signup">
+            <form id="register-form">
+                <label for="chk" aria-hidden="true">Sign up</label>
+                <input type="text" id="register-username" name="txt" placeholder="User name" required="" />
+                <input type="email" id="register-email" name="email" placeholder="Email" required="" />
+                <input type="password" id="register-password" name="password" placeholder="Password" required="" />
+                <button>Sign up</button>
+            </form>
+        </div>
 
-      <div class="login">
-        <form>
-          <label for="chk" aria-hidden="true">Login</label>
-          <input type="email" name="email" placeholder="Email" required="" />
-          <input
-            type="password"
-            name="pswd"
-            placeholder="Password"
-            required=""
-          />
-          <button>Login</button>
-        </form>
-      </div>
+        <div class="login">
+            <form id="login-form">
+                <label for="chk" aria-hidden="true">Login</label>
+                <input type="email" id="login-username" name="email" placeholder="Email" required="" />
+                <input type="password" id="login-password" name="pswd" placeholder="Password" required="" />
+                <button>Login</button>
+            </form>
+        </div>
     </div>
-  </body>
+</body>
+</script>
+
 </html>
